--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "soundcloud-audio": "^1.4.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "wretch": "^1.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
