--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next",
-    "build": "next build",
+    "bootstrap": "cd lambda && yarn && cd ../ && yarn",
+    "serve": "npm-run-all -p serve:*",
+    "serve:next": "next",
+    "serve:lambda": "cd lambda && yarn serve",
+    "build": "npm-run-all -p build:*",
+    "build:next": "next build",
+    "build:lambda": "cd lambda && yarn && yarn build",
     "start": "next start",
     "export": "yarn build && next export"
   },
@@ -30,6 +35,7 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4"
   },
   "lint-staged": {
