--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "bootstrap": "cd lambda && yarn && cd ../ && yarn",
-    "serve": "npm-run-all -p serve:*",
-    "serve:next": "next",
-    "serve:lambda": "cd lambda && yarn serve",
-    "build": "npm-run-all -p build:*",
-    "build:next": "next build",
-    "build:lambda": "cd lambda && yarn && yarn build",
+    "serve": "next",
+    "build": "next build",
     "start": "next start",
-    "export": "yarn build:next && next export && yarn build:lambda"
+    "export": "yarn build && next export"
   },
   "dependencies": {
     "date-fns": "^1.30.1",
@@ -35,7 +30,6 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4"
   },
   "lint-staged": {
