--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-typography": "^0.16.18",
     "soundcloud-audio": "^1.4.0",
     "styled-components": "^4.1.3",
+    "typography": "^0.16.18",
     "wretch": "^1.5.0"
   },
   "devDependencies": {
