--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-typography": "^0.16.18",
+    "slugify": "^1.3.4",
     "soundcloud-audio": "^1.4.0",
     "styled-components": "^4.1.3",
     "typography": "^0.16.18",
