--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
+    "fetch-jsonp": "^1.1.3",
     "next": "^8.0.3",
     "polished": "^3.0.0",
     "prop-types": "^15.7.2",
