--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-responsive": "^6.1.1",
     "react-typography": "^0.16.18",
     "slugify": "^1.3.4",
     "soundcloud-audio": "^1.4.0",
