--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-responsive": "^6.1.1",
+    "react-svg": "^7.2.9",
     "react-typography": "^0.16.18",
     "slugify": "^1.3.4",
     "soundcloud-audio": "^1.4.0",
