remove styled-components displayName in production

--- a/.babelrc
+++ b/.babelrc
@@ -16,5 +16,17 @@
         }
       }
     ]
-  ]
+  ],
+  "env": {
+    "production": {
+      "plugins": [
+        [
+          "styled-components",
+          {
+            "displayName": false
+          }
+        ]
+      ]
+    }
+  }
 }
